--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kxs.rip/">
-    <meta property="og:title" content="KxsClient - The Future of Survev.io">
+    <meta property="og:title" content="Baby Xeno - The Future of Survev.io">
     <meta property="og:description"
         content="Experience a new level of gaming with the upcoming KxsClient. Ultra-fast, secure, and fully customizable.">
     <meta property="og:image" content="https://kxs.rip/assets/KysClient.gif">
