--- a/index.html
+++ b/index.html
@@ -991,17 +991,18 @@ section h2 span::after {
         </div>
     </div>
 </section>
-
-    <!-- Gameplay Section -->
+        <!-- Gameplay Section -->
     <section id="gameplay" class="gameplay">
         <div class="container">
             <h2><span>Gameplay</span></h2>
             <div class="gameplay-content">
                 <div class="gameplay-video">
-                    <img src="gameplay.mp4" alt="Survivx Gameplay Trailer">
-                    <div class="play-button" onclick="alert('This would play a video in a real site')">
-                        <i class="fas fa-play"></i>
-                    </div>
+                    <video controls poster="gameplay-thumbnail.jpg">
+                        <source src="gameplay.mp4" type="video/mp4">
+                        <source src="gameplay.webm" type="video/webm">
+                        <source src="gameplay.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
                 <div class="screenshots">
                     <div class="screenshot" onclick="openModal('screenshot1.png')">
@@ -1020,7 +1021,6 @@ section h2 span::after {
             </div>
         </div>
     </section>
-
     <!-- Screenshot Modal -->
     <div id="imageModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
