--- a/index.html
+++ b/index.html
@@ -455,18 +455,18 @@ section h2 span::after {
             font-size: 1.5rem;
         }
 
-        /* play Section */
-        .play {
+        /* Gameplay Section */
+        .gameplay {
             background-color: var(--secondary-color);
         }
 
-        .play-content {
+        .gameplay-content {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
-        .play-video {
+        .gameplay-video {
             width: 100%; /* Allow the container to be responsive */
             max-width: 800px; /* Set a maximum width */
             border-radius: 10px;
@@ -476,13 +476,13 @@ section h2 span::after {
             position: relative; /* Needed for proper video positioning within the container */
         }
 
-        .play-video video { /* Target the video element inside the container */
+        .gameplay-video video { /* Target the video element inside the container */
             width: 100%; /* Make the video fill the width of its container */
             height: auto; /* Maintain aspect ratio */
             display: block;
         }
-        
-        .play-video img {
+
+        .gameplay-video img {
             width: 100%;
             height: auto;
             display: block;
@@ -543,8 +543,8 @@ section h2 span::after {
             cursor: pointer;
         }
 
-        /*  Info Section */
-        .-info {
+        /* Game Info Section */
+        .game-info {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
         }
 
@@ -879,8 +879,8 @@ section h2 span::after {
             </div>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
-                <li><a href="#play">play</a></li>
-                <li><a href="#info"> Info</a></li>
+                <li><a href="#gameplay">Gameplay</a></li>
+                <li><a href="#info">Game Info</a></li>
                 <li><a href="#download">Download</a></li>
                 <li><a href="#community">Community</a></li>
                 <li><button class="cta-button">Play Now</button></li>
@@ -998,16 +998,17 @@ section h2 span::after {
         </div>
     </div>
 </section>
-                      <!-- Gameplay Section -->
+           <!-- Gameplay Section -->
     <section id="gameplay" class="gameplay">
         <div class="container">
             <h2><span>Gameplay</span></h2>
             <div class="gameplay-content">
                 <div class="gameplay-video">
+
                     <video controls poster="gameplay-thumbnail.png">
                         <source src="gameplay.mp4" type="video/mp4">
-                    </video>
-                </div> 
+
+                </div>
                 <div class="screenshots">
                     <div class="screenshot" onclick="openModal('screenshot1.png')">
                         <img src="screenshot1.png" alt="Screenshot 1">
