--- a/index.html
+++ b/index.html
@@ -1001,42 +1001,34 @@ section h2 span::after {
         </div>
     </div>
 </section>
+    <!-- Gameplay Section -->
+    <section id="gameplay" class="gameplay">
+        <div class="container">
+            <h2><span>Gameplay</span></h2>
+            <div class="gameplay-content">
+                <div class="gameplay-video">
 
-       <!-- Gameplay Section -->
-<section id="gameplay" class="gameplay">
-    <div class="container">
-        <h2><span>Gameplay</span></h2>
-        <div class="showcase-content">
-            <div class="showcase-video">
-                <div class="video-wrapper">
-                    <video poster="gameplay-thumbnail.png" controls>
+                    <video controls poster="gameplay-thumbnail.png">
                         <source src="gameplay.mp4" type="video/mp4">
-                        <!-- You can add more source tags for different video formats for wider compatibility -->
-                        <!-- <source src="gameplay.webm" type="video/webm"> -->
-                        Your browser does not support the video tag.
                     </video>
                 </div>
-            </div>
-            <div class="screenshots">
-                <div class="screenshot" onclick="openModal('screenshot1.png')">
-                    <img src="screenshot1.png" alt="Screenshot 1">
-                </div>
-                <div class="screenshot" onclick="openModal('screenshot2.png')">
-                    <img src="screenshot2.png" alt="Screenshot 2">
-                </div>
-                <div class="screenshot" onclick="openModal('screenshot3.png')">
-                    <img src="screenshot3.png" alt="Screenshot 3">
-                </div>
-                <div class="screenshot" onclick="openModal('screenshot4.png')">
-                    <img src="screenshot4.png" alt="Screenshot 4">
+                <div class="screenshots">
+                    <div class="screenshot" onclick="openModal('screenshot1.png')">
+                        <img src="screenshot1.png" alt="Screenshot 1">
+                    </div>
+                    <div class="screenshot" onclick="openModal('screenshot2.png')">
+                        <img src="screenshot2.png" alt="Screenshot 2">
+                    </div>
+                    <div class="screenshot" onclick="openModal('screenshot3.png')">
+                        <img src="screenshot3.png" alt="Screenshot 3">
+                    </div>
+                    <div class="screenshot" onclick="openModal('screenshot4.png')">
+                        <img src="screenshot4.png" alt="Screenshot 4">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
-
-
+    </section>
     <!-- Screenshot Modal -->
     <div id="imageModal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
