--- a/index.html
+++ b/index.html
@@ -886,11 +886,10 @@ section h2 span::after {
                 <li><a href="#info">Game Info</a></li>
                 <li><a href="#download">Download</a></li>
                 <li><a href="#community">Community</a></li>
-                <li><button class="cta-button">Play Now</button></li>
+                <li><button class="cta-button" onclick="window.location.href='https://survivx.org'">Play Now</button></li>
             </ul>
         </div>
     </nav>
-
     <!-- Hero Section -->
 <section class="hero" id="home">
     <div class="container hero-content animated">
