--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SURVIVX - 2d Battle Royale</title>
+    <title>SURVIVX - Survival Game</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         :root {
@@ -355,7 +355,6 @@
             padding: 100px 0;
         }
 
-/* Consistent section h2 CSS */
 section h2 {
     text-align: center;
     margin-bottom: 60px;
@@ -364,12 +363,12 @@ section h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
     position: relative;
-    width: 100%; /* Full width container */
+    width: 100%; 
 }
 
 section h2 span {
     position: relative;
-    display: inline-block; /* Make the span inline-block */
+    display: inline-block; 
     padding: 0 20px;
     text-shadow: 0 0 10px rgba(0, 255, 170, 0.5);
     z-index: 1;
@@ -455,36 +454,38 @@ section h2 span::after {
             font-size: 1.5rem;
         }
 
-                /* Gameplay Section */
-        .gameplay {
-            background-color: var(--secondary-color);
-        }
+/* Gameplay Section */
+.gameplay {
+    background-color: var(--secondary-color);
+}
 
-        .gameplay-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+.gameplay-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        .gameplay-video {
-            width: 100%; /* Allow the container to be responsive */
-            max-width: 800px; /* Set a maximum width */
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: var(--shadow);
-            margin-bottom: 40px;
-            position: relative; /* Needed for proper video positioning within the container */
-        }
+.gameplay-video {
+    width: 100%; 
+    max-width: 800px; 
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: var(--shadow);
+    margin-bottom: 40px;
+    position: relative; 
+}
 
-        .gameplay-video video { /* Target the video element inside the container */
-            width: 100%; /* Make the video fill the width of its container */
-            height: auto; /* Maintain aspect ratio */
-            display: block;
-        }
+.gameplay-video iframe { 
+    width: 100%; 
+    height: 100%; 
+    display: block;
+    border: none; 
+}
 
-        /* ... rest of your CSS ... */
 
-
+.gameplay-video {
+    height: 450px;
+}
         .gameplay-video img {
             width: 100%;
             height: auto;
@@ -769,7 +770,7 @@ section h2 span::after {
 
         .made-by img {
             margin-top: 10px;
-            height: 50px; /* Adjust as needed */
+            height: 50px;
             filter: drop-shadow(0 0 5px rgba(0, 255, 170, 0.5));
         }
 
@@ -890,6 +891,7 @@ section h2 span::after {
             </ul>
         </div>
     </nav>
+
     <!-- Hero Section -->
 <section class="hero" id="home">
     <div class="container hero-content animated">
@@ -1001,33 +1003,34 @@ section h2 span::after {
     </div>
 </section>
 
-        <!-- Gameplay Section -->
-    <section id="gameplay" class="gameplay">
-        <div class="container">
-            <h2><span>Gameplay</span></h2>
-            <div class="gameplay-content">
-                <div class="gameplay-video">
-                    <video controls poster="gameplay-thumbnail.png">
-                        <source src="gameplay.mp4" type="video/mp4">
-                    </video>
+    <!-- Gameplay Section -->
+<section id="gameplay" class="gameplay">
+    <div class="container">
+        <h2><span>Gameplay</span></h2>
+        <div class="gameplay-content">
+            <div class="gameplay-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2uyy5ngnCBI" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="screenshots">
+                <div class="screenshot" onclick="openModal('screenshot1.png')">
+                    <img src="screenshot1.png" alt="Screenshot 1">
                 </div>
-                <div class="screenshots">
-                    <div class="screenshot" onclick="openModal('screenshot1.png')">
-                        <img src="screenshot1.png" alt="Screenshot 1">
-                    </div>
-                    <div class="screenshot" onclick="openModal('screenshot2.png')">
-                        <img src="screenshot2.png" alt="Screenshot 2">
-                    </div>
-                    <div class="screenshot" onclick="openModal('screenshot3.png')">
-                        <img src="screenshot3.png" alt="Screenshot 3">
-                    </div>
-                    <div class="screenshot" onclick="openModal('screenshot4.png')">
-                        <img src="screenshot4.png" alt="Screenshot 4">
-                    </div>
+                <div class="screenshot" onclick="openModal('screenshot2.png')">
+                    <img src="screenshot2.png" alt="Screenshot 2">
+                </div>
+                <div class="screenshot" onclick="openModal('screenshot3.png')">
+                    <img src="screenshot3.png" alt="Screenshot 3">
+                </div>
+                <div class="screenshot" onclick="openModal('screenshot4.png')">
+                    <img src="screenshot4.png" alt="Screenshot 4">
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
     <!-- Screenshot Modal -->
