--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@ section h2 span::after {
                 <i class="fab fa-steam"></i>
                 <h3>Steam</h3>
                 <p>Free</p>
-                <a href="https://survivx.org" class="btn btn-primary">Buy Now</a>
+                <a href="https://survivx.org" class="btn btn-primary">Get Now</a>
             </div>
             <div class="platform animated">
                 <i class="fas fa-gamepad"></i>
